ユーザーページの機能追加や、写真のモーダル表示

--- a/src/main/resources/templates/post/postDetail.html
+++ b/src/main/resources/templates/post/postDetail.html
@@ -93,7 +93,7 @@
 				})).appendTo(document.body).submit();
 			}
 		});
-		
+
 		$('.postFavoriteRegister').click(function(e) {
 			var requestParam = $(this).prev().val();
 			var button = $(this);
@@ -101,8 +101,6 @@
 				$.getJSON("/post/insertPostFavorite", {
 					post_id : requestParam
 				}, function(json) {
-					console.log(json);
-					console.log(button);
 					button.removeClass("btn-outline-warning");
 					button.addClass("btn-warning");
 					button.text("お気に入りから外す");
@@ -118,12 +116,132 @@
 			}
 		});
 
+		$('.addModaiImage').click(function(e) {
+			const requestParam = $(this).prev().val();
+			const img = $(this);
+			
+			$.getJSON("/post/checkPostImageFavorite", {
+				postImage_id : requestParam
+			}, function(json) {
+				const count = json.resourse.count;
+				const flag = json.resourse.flag;
+				const postimageFavoriteId = json.resourse.postimageFavoriteId;
+				let text ="";
+				
+				if(flag){
+					$('#addAlbumButton').removeClass("btn-outline-warning");
+					$('#addAlbumButton').addClass("btn-warning");
+					text ="アルバムから消す";
+				}else{
+					$('#addAlbumButton').removeClass("btn-warning");
+					$('#addAlbumButton').addClass("btn-outline-warning");
+					text ="アルバムに追加";
+				}
+				$('#addAlbumButton').text(text + "  (" + count +")");
+				$('#addAlbumButton').next().val(postimageFavoriteId);
+				const src = img.attr('src');
+				const postImageId = img.prev().val();
+				$('#modalImage').attr('src', src);
+				$('#addAlbumButton').prev().val(postImageId);
+
+				const tag = img.parent().find("a");
+				if (typeof tag != "undefined") {
+					$('#modalImageLink').attr('href', tag.attr('href'));
+					$('#modalImageLink').text(tag.text());
+				}else{
+					$('#modalImageLink').attr('href',"");
+					$('#modalImageLink').text("");
+				}
+				
+				$('#opneModalButton').trigger('click');
+			});
+
+		});
+		
+		$('#addAlbumButton').click(function(e) {
+			const id = $(this).next().val();
+			const param = $(this).prev().val();
+			if (id == 0) {
+				$.getJSON("/post/insertPostImageFavorite", {
+					postImage_id : param
+				}, function(json) {
+					$('#addAlbumButton').next().val(json.postImageFavoriteId);
+					checkPostImageFavorite(param);
+				});
+			} else {
+				$.getJSON("/post/deletePostImageFavorite", {
+					postImage_id : param
+				}, function(json) {
+					$('#addAlbumButton').next().val(0);
+					checkPostImageFavorite(param);
+				});
+			}
+		});
+		
+		function checkPostImageFavorite(postImage_id){
+			$.getJSON("/post/checkPostImageFavorite", {
+				postImage_id : postImage_id
+			}, function(json) {
+				const count = json.resourse.count;
+				const flag = json.resourse.flag;
+				const postimageFavoriteId = json.resourse.postimageFavoriteId;
+				let text ="";
+				
+				if(flag){
+					$('#addAlbumButton').removeClass("btn-outline-warning");
+					$('#addAlbumButton').addClass("btn-warning");
+					text ="アルバムから消す";
+				}else{
+					$('#addAlbumButton').removeClass("btn-warning");
+					$('#addAlbumButton').addClass("btn-outline-warning");
+					text ="アルバムに追加";
+				}
+				$('#addAlbumButton').text(text + "  (" + count +")");
+			});
+		}
+
 	});
 </script>
 
 </head>
 
 <body>
+	<!-- Modal -->
+	<button type="button" data-toggle="modal" id="opneModalButton"
+					data-target="#exampleModalCenter" style="display:none;"></button>
+	<div class="modal fade" id="exampleModalCenter" tabindex="-1"
+		role="dialog" aria-labelledby="exampleModalCenterTitle"
+		aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalCenterTitle">
+						投稿者：<a
+							th:href="@{/user/mypage/{user_id}(user_id=${post.loginUser.user_id})}"><img
+							th:src="${post.loginUser.profileImagePath}" width="40px"
+							height="40px"></a> <a
+							th:href="@{/user/mypage/{user_id}(user_id=${post.loginUser.user_id})}"
+							th:text="${post.loginUser.userName}"> </a>
+					</h5>
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<a id="modalImageLink" href="/"></a> <img id="modalImage"
+						src="/images/defaultAnimal.png" style="width: 100%">
+				</div>
+				<div class="modal-footer">
+					<input type="hidden" name="albumPostImageId">
+					<button type="button" class="btn btn-outline-warning" id="addAlbumButton"></button>
+					<input type="hidden" name="PostImageFavoritId">
+					<button type="button" class="btn btn-secondary"
+						data-dismiss="modal" id="closeModalButton">閉じる</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div th:replace="~{block/header_boot::headerA_boot}"></div>
 	<div class="container">
 		<div th:object="${post.zoo}">
@@ -139,9 +257,8 @@
 					th:src="*{loginUser.profileImagePath}" width="40px" height="40px"></a>
 				<a th:href="@{/user/mypage/{user_id}(user_id=*{loginUser.user_id})}"
 					th:text="*{loginUser.userName}"> </a> <span
-					th:text="*{displayDiffTime}"></span>
-					<input type="hidden"
-								name="favorite_post_id" th:value="*{post_id}">
+					th:text="*{displayDiffTime}"></span> <input type="hidden"
+					name="favorite_post_id" th:value="*{post_id}">
 				<button type="button" th:if="*{favoriteFlag == false}"
 					class="btn btn-outline-warning btn-sm postFavoriteRegister"
 					th:text="お気に入りに追加"></button>
@@ -178,11 +295,13 @@
 					th:unless="*{animal} == null"
 					th:href="@{/detail/{animal_id}(animal_id=*{animal.animal_id})}"
 					th:text="'#' + *{animal.name}"></a><br
-					th:unless="*{animal} == null"> <img th:src="*{imageAddress}"
-					width="200px" style="border: solid;">
+					th:unless="*{animal} == null"> <input type="hidden"
+					name="postImageId" th:value="*{postimage_id}"><img
+					th:src="*{imageAddress}" class="addModaiImage" width="100px" style="border: solid;cursor:zoom-in;">
 				</span>
 			</div>
-			<div th:text="*{#dates.format(createdDate,'yyyy.MM.dd  hh:mm')}"></div>
+			<div
+				th:text="'投稿日時:  ' + *{#dates.format(createdDate,'yyyy.MM.dd  hh:mm')}"></div>
 		</div>
 		<div class="container">
 			<form sec:authorize="isAuthenticated()"
@@ -213,9 +332,8 @@
 					th:src="*{loginUser.profileImagePath}" width="40px" height="40px"></a>
 				<a th:href="@{/user/mypage/{user_id}(user_id=*{loginUser.user_id})}"
 					th:text="*{loginUser.userName}"> </a> <span
-					th:text="*{displayDiffTime}"></span>
-					<input type="hidden"
-								name="favorite_post_id" th:value="*{post_id}">
+					th:text="*{displayDiffTime}"></span> <input type="hidden"
+					name="favorite_post_id" th:value="*{post_id}">
 				<button type="button" th:if="*{favoriteFlag == false}"
 					class="btn btn-outline-warning btn-sm postFavoriteRegister"
 					th:text="お気に入りに追加"></button>
@@ -242,7 +360,8 @@
 			</div>
 			<div th:text="*{contents}"
 				style="white-space: pre-wrap; margin: 10px;"></div>
-			<div th:text="*{#dates.format(createdDate,'yyyy.MM.dd  hh:mm')}"></div>
+			<div
+				th:text="'投稿日時:  ' + *{#dates.format(createdDate,'yyyy.MM.dd  hh:mm')}"></div>
 		</div>
 	</div>
 </body>
