--- a/src/main/resources/templates/post/postInsert.html
+++ b/src/main/resources/templates/post/postInsert.html
@@ -88,7 +88,7 @@
 					});
 					$(inputHiddenTag).appendTo(".imageDisplay_" + i);
 					
-					var modalButton = $("<buttonn>", {
+					var modalButton = $("<button>", {
 						type : "button",
 						addClass : "btn btn-primary btn-sm modal-open-button",
 						text : "コアラをタグ付け"
@@ -97,7 +97,7 @@
 					 modalButton.attr('data-target', '#exampleModalCenter');
 					 $(modalButton).appendTo(".imageDisplay_" + i);
 					
-					var button = $("<buttonn>", {
+					var button = $("<button>", {
 						type : "button",
 						addClass : "btn btn-danger btn-sm deleteImageButton",
 						id : "deleteImage_" + i,
@@ -270,7 +270,6 @@
 						type="button">写真追加</button>
 				</div>
 				<div id="input-file-zone"></div>
-				<input type="hidden" th:field="*{deletePostImageIds}">
 				<input type="hidden" th:field="*{parent_id}">
 				<div id="send-zone">
 				<button class="btn btn-outline-primary btn-sm" id = "submitButton" type="submit">保存</button>
